# Patience-Solver

./: pyproject.toml
patience_solver/game_rules/: cards.py  gameboard.py
tests/: conftest.py
tests/data/: board_1.txt
tests/game_rules/: test_cards.py  test_gameboard.py
