[tool.poetry]
name = "patience_solver"
version = "0.1.0"
description = "An automatic solitare solver for Zachtronic's Exapunks"
authors = ["Troy Murray <mail@troymurray.dev>"]
license = "MIT Licence"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.10b0"
isort = "^5.10.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
